# rust-crd

./: Cargo.toml  README.md
docs/: book.yaml  crd.yaml
src/: main.rs
