[package]
name = "rust-crd"
version = "0.1.0"
edition = "2018"

[dependencies]
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_24"] }
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = "1.0.82"
chrono = { version = "0.4.11", features = ["serde"] }
tokio = { version = "1.20.1", features = ["full"] }
schemars = "0.8.10"
validator = { version = "0.15", features = ["derive"] }
futures = "0.3"
